--- a/random-background-color/index.html
+++ b/random-background-color/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1 id="rgb">rgb(23,245,213)</h1>
+    <h1 id="rgb">Weolcome, You can change background color</h1>
     <button id="colorbtn">Change Color</button>
 
     <script src="app.js"></script>
